platform/apps/atum-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/name: atum-operator
    name: atum-operator
    namespace: atum-system
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: atum-operator
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app.kubernetes.io/name: atum-operator
        spec:
            containers:
                - image: 10.77.0.9:32443/atum/atum-operator:build-d7425e0c808049776c0d4999092298577b5f7050deb90aa784d3a74f4377e2dc
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    httpGet:
                        path: /healthz
                        port: health
                  name: manager
                  ports:
                    - containerPort: 8081
                      name: health
                  readinessProbe:
                    httpGet:
                        path: /readyz
                        port: health
                  resources:
                    limits:
                        cpu: 250m
                        memory: 128Mi
                    requests:
                        cpu: 25m
                        memory: 48Mi
                  securityContext:
                    allowPrivilegeEscalation: false
                    capabilities:
                        drop:
                            - ALL
                    readOnlyRootFilesystem: true
                    runAsNonRoot: true
                    runAsUser: 65532
            securityContext:
                runAsNonRoot: true
                seccompProfile:
                    type: RuntimeDefault
            serviceAccountName: atum-operator
